--- a/demo/components/select/select.component.html
+++ b/demo/components/select/select.component.html
@@ -15,3 +15,19 @@
     <li *ngFor="let item of selectedItemsMulti">{{item.label}}</li>
   </ul>
 </div>
+
+
+
+<br>
+<br>
+<b>Options via html</b><br>
+<vcl-select (select)="onSelect($event)">
+  <vcl-select-option label="Item1"></vcl-select-option>
+  <vcl-select-option label="Item2"></vcl-select-option>
+  <vcl-select-option label="Item3"></vcl-select-option>
+  <vcl-select-option label="Item4"></vcl-select-option>
+  <vcl-select-option label="Item5"></vcl-select-option>
+</vcl-select>
+<div *ngIf="selectedItemSingle">
+  Selected: {{selectedItemSingle.label}}
+</div>
