--- a/demo/app.css
+++ b/demo/app.css
@@ -110,6 +110,8 @@
      -------- */
   /* Input
      ----- */
+  /* File Input
+     ---------- */
   /* Checkbox
      -------- */
   /* Radio Button
@@ -146,13 +148,17 @@
      ------------ */
 }
 
-/*! normalize.css v4.1.1 | MIT License | github.com/necolas/normalize.css */
+/*! normalize.css v5.0.0 | MIT License | github.com/necolas/normalize.css */
 
 /**
  * 1. Change the default font family in all browsers (opinionated).
  * 2. Correct the line height in all browsers.
- * 3. Prevent adjustments of font size after orientation changes in IE and iOS.
+ * 3. Prevent adjustments of font size after orientation changes in
+ *    IE on Windows Phone and in iOS.
  */
+
+/* Document
+   ========================================================================== */
 
 html {
   font-family: sans-serif;
@@ -165,6 +171,9 @@ html {
   /* 3 */
 }
 
+/* Sections
+   ========================================================================== */
+
 /**
  * Remove the margin in all browsers (opinionated).
  */
@@ -173,70 +182,79 @@ body {
   margin: 0;
 }
 
-/* HTML5 display definitions
-   ========================================================================== */
-
 /**
  * Add the correct display in IE 9-.
- * 1. Add the correct display in Edge, IE, and Firefox.
- * 2. Add the correct display in IE.
  */
 
 article,
 aside,
-details,
-figcaption,
-figure,
 footer,
 header,
-main,
-menu,
 nav,
-section,
-summary {
+section {
+  display: block;
+}
+
+/**
+ * Correct the font size and margin on `h1` elements within `section` and
+ * `article` contexts in Chrome, Firefox, and Safari.
+ */
+
+h1 {
+  font-size: 2em;
+  margin: 0.67em 0;
+}
+
+/* Grouping content
+   ========================================================================== */
+
+/**
+ * Add the correct display in IE 9-.
+ * 1. Add the correct display in IE.
+ */
+
+figcaption,
+figure,
+main {
   /* 1 */
   display: block;
 }
 
 /**
- * Add the correct display in IE 9-.
+ * Add the correct margin in IE 8.
  */
 
-audio,
-canvas,
-progress,
-video {
-  display: inline-block;
+figure {
+  margin: 1em 40px;
 }
 
 /**
- * Add the correct display in iOS 4-7.
+ * 1. Add the correct box sizing in Firefox.
+ * 2. Show the overflow in Edge and IE.
  */
 
-audio:not([controls]) {
-  display: none;
+hr {
+  box-sizing: content-box;
+  /* 1 */
   height: 0;
+  /* 1 */
+  overflow: visible;
+  /* 2 */
 }
 
 /**
- * Add the correct vertical alignment in Chrome, Firefox, and Opera.
+ * 1. Correct the inheritance and scaling of font size in all browsers.
+ * 2. Correct the odd `em` font sizing in all browsers.
  */
 
-progress {
-  vertical-align: baseline;
+pre {
+  font-family: monospace, monospace;
+  /* 1 */
+  font-size: 1em;
+  /* 2 */
 }
 
-/**
- * Add the correct display in IE 10-.
- * 1. Add the correct display in IE.
- */
-
-template,
-[hidden] {
-  display: none;
-}
-
-/* Links
+/* Text-level semantics
    ========================================================================== */
 
 /**
@@ -260,9 +278,6 @@ a:active,
 a:hover {
   outline-width: 0;
 }
-
-/* Text-level semantics
-   ========================================================================== */
 
 /**
  * 1. Remove the bottom border in Firefox 39-.
@@ -297,21 +312,25 @@ strong {
 }
 
 /**
+ * 1. Correct the inheritance and scaling of font size in all browsers.
+ * 2. Correct the odd `em` font sizing in all browsers.
+ */
+
+code,
+kbd,
+samp {
+  font-family: monospace, monospace;
+  /* 1 */
+  font-size: 1em;
+  /* 2 */
+}
+
+/**
  * Add the correct font style in Android 4.3-.
  */
 
 dfn {
   font-style: italic;
-}
-
-/**
- * Correct the font size and margin on `h1` elements within `section` and
- * `article` contexts in Chrome, Firefox, and Safari.
- */
-
-h1 {
-  font-size: 2em;
-  margin: 0.67em 0;
 }
 
 /**
@@ -356,6 +375,24 @@ sup {
    ========================================================================== */
 
 /**
+ * Add the correct display in IE 9-.
+ */
+
+audio,
+video {
+  display: inline-block;
+}
+
+/**
+ * Add the correct display in iOS 4-7.
+ */
+
+audio:not([controls]) {
+  display: none;
+  height: 0;
+}
+
+/**
  * Remove the border on images inside links in IE 10-.
  */
 
@@ -371,51 +408,11 @@ svg:not(:root) {
   overflow: hidden;
 }
 
-/* Grouping content
-   ========================================================================== */
-
-/**
- * 1. Correct the inheritance and scaling of font size in all browsers.
- * 2. Correct the odd `em` font sizing in all browsers.
- */
-
-code,
-kbd,
-pre,
-samp {
-  font-family: monospace, monospace;
-  /* 1 */
-  font-size: 1em;
-  /* 2 */
-}
-
-/**
- * Add the correct margin in IE 8.
- */
-
-figure {
-  margin: 1em 40px;
-}
-
-/**
- * 1. Add the correct box sizing in Firefox.
- * 2. Show the overflow in Edge and IE.
- */
-
-hr {
-  box-sizing: content-box;
-  /* 1 */
-  height: 0;
-  /* 1 */
-  overflow: visible;
-  /* 2 */
-}
-
 /* Forms
    ========================================================================== */
 
 /**
- * 1. Change font properties to `inherit` in all browsers (opinionated).
+ * 1. Change the font styles in all browsers (opinionated).
  * 2. Remove the margin in Firefox and Safari.
  */
 
@@ -424,18 +421,14 @@ input,
 optgroup,
 select,
 textarea {
-  font: inherit;
+  font-family: sans-serif;
+  /* 1 */
+  font-size: 100%;
+  /* 1 */
+  line-height: 1.15;
   /* 1 */
   margin: 0;
   /* 2 */
-}
-
-/**
- * Restore the font weight unset by the previous rule.
- */
-
-optgroup {
-  font-weight: bold;
 }
 
 /**
@@ -530,6 +523,18 @@ legend {
 }
 
 /**
+ * 1. Add the correct display in IE 9-.
+ * 2. Add the correct vertical alignment in Chrome, Firefox, and Opera.
+ */
+
+progress {
+  display: inline-block;
+  /* 1 */
+  vertical-align: baseline;
+  /* 2 */
+}
+
+/**
  * Remove the default vertical scrollbar in IE.
  */
 
@@ -572,21 +577,12 @@ textarea {
 }
 
 /**
- * Remove the inner padding and cancel buttons in Chrome and Safari on OS X.
+ * Remove the inner padding and cancel buttons in Chrome and Safari on macOS.
  */
 
 [type="search"]::-webkit-search-cancel-button,
 [type="search"]::-webkit-search-decoration {
   -webkit-appearance: none;
-}
-
-/**
- * Correct the text style of placeholders in Chrome, Edge, and Safari.
- */
-
-::-webkit-input-placeholder {
-  color: inherit;
-  opacity: 0.54;
 }
 
 /**
@@ -599,6 +595,57 @@ textarea {
   /* 1 */
   font: inherit;
   /* 2 */
+}
+
+/* Interactive
+   ========================================================================== */
+
+/*
+ * Add the correct display in IE 9-.
+ * 1. Add the correct display in Edge, IE, and Firefox.
+ */
+
+details,
+menu {
+  display: block;
+}
+
+/*
+ * Add the correct display in all browsers.
+ */
+
+summary {
+  display: list-item;
+}
+
+/* Scripting
+   ========================================================================== */
+
+/**
+ * Add the correct display in IE 9-.
+ */
+
+canvas {
+  display: inline-block;
+}
+
+/**
+ * Add the correct display in IE.
+ */
+
+template {
+  display: none;
+}
+
+/* Hidden
+   ========================================================================== */
+
+/**
+ * Add the correct display in IE 10-.
+ */
+
+[hidden] {
+  display: none;
 }
 
 /* Set the viewport width to the device width */
@@ -1266,7 +1313,6 @@ span.vclButton[disabled] {
   -webkit-transition: color .25s linear, background-color .25s ease-in-out, border-color .25s ease-in-out;
   transition: color .25s linear, background-color .25s ease-in-out, border-color .25s ease-in-out;
   min-height: 2.5em;
-  outline: 0;
 }
 
 .vclCalendar.vclCalInput {
@@ -1274,7 +1320,6 @@ span.vclButton[disabled] {
      -moz-user-select: none;
       -ms-user-select: none;
           user-select: none;
-  outline: 0;
 }
 
 .vclCalendar.vclCalInput .vclCalItem:hover {
@@ -1293,11 +1338,17 @@ span.vclButton[disabled] {
   color: hsl(0, 0%, 63%);
 }
 
+.vclCalItem.vclSelected,
+.vclCalendar.vclCalInput .vclCalItem.vclSelected:hover {
+  color: #FFFFFF;
+  background-color: #0888BF;
+  font-weight: 500;
+}
+
 .vclCalItem.vclDisabled,
 .vclCalendar.vclCalInput .vclCalItem.vclDisabled:hover {
   color: hsl(0, 0%, 50%);
   background-color: hsl(0, 0%, 88%);
-  cursor: default;
 }
 
 .vclCalItem.vclAvailable,
@@ -1308,13 +1359,6 @@ span.vclButton[disabled] {
 .vclCalItem.vclUnavailable,
 .vclCalendar.vclCalInput .vclCalItem.vclUnavailable:hover {
   background-color: #f2dede;
-}
-
-.vclCalItem.vclSelected,
-.vclCalendar.vclCalInput .vclCalItem.vclSelected:hover {
-  color: #FFFFFF;
-  background-color: #0888BF;
-  font-weight: 500;
 }
 
 .vclCheckbox {
@@ -2022,13 +2066,6 @@ hr {
   right: 0;
 }
 
-.vclInputGroupEmb button.vclButton {
-  border-width: 1px;
-  border-style: solid;
-  border-color: transparent;
-  background-clip: content-box;
-}
-
 .vclInputGroupEmb button.vclButton[disabled] {
   display: none;
 }
@@ -2060,6 +2097,82 @@ figure figcaption {
   display: block;
   font-weight: normal;
   font-size: 1.1em;
+}
+
+.vclFileInput {
+  width: 100%;
+  display: inline-block;
+  box-sizing: border-box;
+  cursor: pointer;
+  text-align: center;
+  color: (--file-input-color);
+  background-color: #FFFFFF;
+  border-width: 1px;
+  border-style: solid;
+  border-color: hsl(0, 0%, 63%);
+  border-radius: 0;
+}
+
+.vclFileInput .vclFileInputIcon {
+  font-size: 2em;
+  margin-top: 0.4em;
+  margin-left: 0.4em;
+  margin-right: 0.4em;
+  margin-bottom: 0.4em;
+}
+
+.vclFileInput .vclFileInputPlaceholder {
+  display: inline-block;
+  margin-top: 1em;
+  margin-left: 1em;
+  margin-right: 1em;
+  margin-bottom: 1em;
+}
+
+.vclFileInput:focus,
+.vclFileInput.vclFocused {
+  background-color: #FFFFFF;
+  border-color: #00ADEF;
+}
+
+.vclFileInput.vclDisabled,
+.vclFileInput.vclDisabled:hover,
+.vclFileInput.vclDisabled:active,
+.vclFileInput.vclDisabled:focus {
+  outline: none;
+  cursor: default;
+  color: hsl(0, 0%, 15%);
+  background-color: hsl(0, 0%, 88%);
+  border-color: hsl(0, 0%, 63%);
+}
+
+.vclFileInput.vclError {
+  border-color: #d9534f;
+}
+
+.vclFileInput.vclWarning {
+  border-color: #f0ad4e;
+}
+
+.vclFileInput.vclSuccess {
+  border-color: #5cb85c;
+}
+
+.vclFileInput.vclDisabled,
+.vclFileInput.vclDisabled:hover,
+.vclFileInput.vclDisabled:active,
+.vclFileInput.vclDisabled:focus {
+  outline: none;
+  cursor: default;
+  color: hsl(0, 0%, 15%);
+  background-color: hsl(0, 0%, 88%);
+  border-color: hsl(0, 0%, 63%);
+}
+
+.vclFileInput.vclDragndrop {
+  color: #000000;
+  background-color: #96DCFA;
+  border-color: #96DCFA;
 }
 
 /* flexbox based layout primitives */
@@ -3014,7 +3127,7 @@ legend + .vclInputControlGroup {
   background-repeat: no-repeat;
   fill: currentcolor;
   position: relative;
-  line-height: 1;
+  line-height: inherit;
 }
 
 .vclIcon.vclIconSize1 {
@@ -5114,7 +5227,7 @@ table {
   margin-bottom: 1.3em;
 }
 
-.vclTable.vclRowSelectability tbody tr {
+.vclTable .vclRowSelectability {
   cursor: pointer;
 }
 
