--- a/src/components/jss-form/jss-form-object.component.html
+++ b/src/components/jss-form/jss-form-object.component.html
@@ -5,16 +5,15 @@ style="border-style:solid;margin:5px;padding: 5px;">
   <b *ngIf="schema.properties[key].properties">{{key}}:</b>
 
   <vcl-jss-form-object *ngIf="schema.properties[key].properties"
-   [schema]="schema.properties[key]"
-   [parentPath]="parentPath + key + '.'"
-   [formGroup]="formGroup.controls[key]"
-   [error]="error"
+    [schema]="schema.properties[key]"
+    [parentPath]="parentPath + key + '.'"
+    [formGroup]="formGroup.controls[key]"
+    [error]="error"
    >
- </vcl-jss-form-object>
+  </vcl-jss-form-object>
 
   <div *ngIf="!schema.properties[key].properties">
     {{key}}
-
     <div [ngSwitch]="formType(schema.properties[key])">
       <div *ngSwitchCase="'text'">
         <vcl-input-control-group [type]="'error'" [label]="fieldErrors[key]">
@@ -30,10 +29,12 @@ style="border-style:solid;margin:5px;padding: 5px;">
         </vcl-input-control-group>
       </div>
       <div *ngSwitchCase="'select'">
-        <vcl-select [formControlName]="key">
-          <vcl-select-option *ngFor="let option of selectItems(schema.properties[key])"
-           [label]="option.label" [value]="option.value"></vcl-select-option>
-        </vcl-select>
+        <vcl-input-control-group [type]="'error'" [label]="fieldErrors[key]">
+          <vcl-select [formControlName]="key">
+            <vcl-select-option *ngFor="let option of selectItems(schema.properties[key])"
+              [label]="option.label" [value]="option.value"></vcl-select-option>
+          </vcl-select>
+        </vcl-input-control-group>
       </div>
       <div *ngSwitchCase="'switch'">
         <vcl-flip-switch onLabel="{{'Yes' | loc }}" offLabel="{{'No' | loc}}"
@@ -48,15 +49,12 @@ style="border-style:solid;margin:5px;padding: 5px;">
       <div *ngSwitchCase="'checkbox'">
         <vcl-checkbox [formControlName]="key"></vcl-checkbox>
       </div>
-
       <div *ngSwitchCase="'radio'">
+      <vcl-input-control-group [type]="'error'" [label]="fieldErrors[key]">
         <vcl-radio-group [formControlName]="key"
          [options]="radioOptions(schema.properties[key])"></vcl-radio-group>
-      </div>
-
-
+       </vcl-input-control-group>
+     </div>
     </div>
-
   </div>
-
 </div>
