--- a/src/components/date-picker/date-picker.component.html
+++ b/src/components/date-picker/date-picker.component.html
@@ -35,7 +35,9 @@
       <div *ngIf="displayWeekNumbers && week.length==7" class="vclDGCell">
         {{week[5].getWeekNumber()}}
       </div>
-      <div *ngFor="let day of week" class="vclDGCell timeFragment vclCalItem" [class.vclDisabled]="isDisabled(day)" [class.vclSelected]="isMarked(day)" (tap)="!isDisabled(day) && select(day)" [class.vclToday]="highlightSelected && day.isToday()" [class.vclOtherMonth]="!day.isSameMonthAndYear()">
+      <div *ngFor="let day of week" class="vclDGCell timeFragment vclCalItem" [class.vclDisabled]="isDisabled(day)"
+       [class.vclSelected]="isMarked(day)" (tap)="!isDisabled(day) && select(day)"
+       [class.vclToday]="highlightSelected && day.isToday()" [class.vclOtherMonth]="!day.isSameMonthAndYear()">
         {{day.date.getDate()}}
       </div>
     </div>
@@ -62,7 +64,7 @@
     <div class="vclDGRow" role="row" *ngFor="let row of viewDate.getYearsBlock()">
       <div *ngFor="let year of row" class="vclDGCell vclCalItem" role="gridcell"
       [class.vclSelected]="viewDate.date.getFullYear()==year"
-       (tap)="yearPickSelect(year)" 
+       (tap)="yearPickSelect(year)"
        [class.vclToday]="highlightSelected && today.isInYear(year)">
         {{year}}
       </div>
