--- a/demo/components/flip-switch/flip-switch.component.html
+++ b/demo/components/flip-switch/flip-switch.component.html
@@ -1,1 +1,6 @@
-<vcl-flip-switch onLabel="An" offLabel="Aus"></vcl-flip-switch>
+<h3>Normal</h3>
+<vcl-flip-switch onLabel="On" offLabel="Off" (change)="onChange($event)"></vcl-flip-switch>
+
+
+<h3>Preset "on"</h3>
+<vcl-flip-switch [value]="true" onLabel="On" offLabel="Off" (change)="onChange($event)"></vcl-flip-switch>
